<resources>
    <string name="app_name">MPAndroidChartTest</string>
    <string name="bar_chart">柱状图</string>
    <string name="pie_chart">饼图</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="text_username">用户名</string>
    <string name="text_password">密&#160;&#160;&#160;&#160;码</string>
    <string name="text_verify_code">验证码</string>
    <string name="text_login">登录</string>
    <string name="text_forget_password">忘记密码?</string>
    <string name="text_get_verify_code">获取验证码</string>
</resources>
