<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:paddingRight="30dp"
              android:paddingLeft="30dp"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <TextView
            style="@style/text_style_middle_font"
            android:text="@string/text_username"
            android:gravity="center"
            android:id="@+id/tvUsername"
            android:layout_width="50dp"
            android:layout_height="match_parent"/>
        <EditText
            android:paddingRight="10dp"
            android:paddingLeft="10dp"
            android:id="@+id/etUsername"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <TextView
            style="@style/text_style_middle_font"
            android:text="@string/text_password"
            android:gravity="center"
            android:id="@+id/tvPassword"
            android:layout_width="50dp"
            android:layout_height="match_parent"/>
        <EditText
            android:inputType="textPassword"
            android:paddingRight="10dp"
            android:paddingLeft="10dp"
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <TextView
            style="@style/text_style_middle_font"
            android:text="@string/text_verify_code"
            android:gravity="center"
            android:id="@+id/tvVerifyCode"
            android:layout_width="50dp"
            android:layout_height="match_parent"/>
        <EditText
            android:layout_weight="1"
            android:inputType="textPassword"
            android:paddingRight="10dp"
            android:paddingLeft="10dp"
            android:id="@+id/etVerifyCode"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
        <Button
            style="@style/text_style_small_font"
            android:onClick="getVerifyCode"
            android:id="@+id/btnGetVerifyCode"
            android:text="@string/text_get_verify_code"
            android:layout_width="100dp"
            android:layout_height="match_parent"/>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            style="@style/text_style_middle_font"
            android:onClick="login"
            android:id="@+id/btnLogin"
            android:text="@string/text_login"
            android:layout_width="100dp"
            android:layout_height="50dp"/>
        <TextView
            android:clickable="true"
            android:onClick="forgetPassword"
            android:layout_alignParentRight="true"
            android:id="@+id/tvForgetPassword"
            android:gravity="right|center_vertical"
            android:text="@string/text_forget_password"
            android:layout_width="wrap_content"
            android:layout_height="50dp"/>
    </RelativeLayout>
</LinearLayout>